--- a/client/package.json
+++ b/client/package.json
@@ -12,13 +12,12 @@
   "dependencies": {
     "@pdf-lib/fontkit": "^1.1.1",
     "@reduxjs/toolkit": "^2.5.0",
+    "@tanstack/react-query": "^5.66.0",
     "antd": "^5.23.1",
     "axios": "^1.7.9",
     "classnames": "^2.5.1",
     "date-fns": "^4.1.0",
     "html5-qrcode": "^2.3.8",
-    "mobx": "^6.13.5",
-    "mobx-react-lite": "^4.1.0",
     "pdf-lib": "^1.17.1",
     "qrcode.react": "^4.2.0",
     "react": "^18.3.1",
@@ -26,7 +25,6 @@
     "react-date-range": "^2.0.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.4.0",
-    "react-redux": "^9.2.0",
     "react-router-dom": "^7.1.1",
     "zustand": "^5.0.3"
   },
