--- a/client/package.json
+++ b/client/package.json
@@ -17,6 +17,7 @@
     "axios": "^1.7.9",
     "classnames": "^2.5.1",
     "date-fns": "^4.1.0",
+    "dayjs": "^1.11.13",
     "html5-qrcode": "^2.3.8",
     "pdf-lib": "^1.17.1",
     "qrcode.react": "^4.2.0",
